# cram

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  cram.toml.example  roadmap.toml
.sqlx/: query-00fb84f2d497ea6dd1665543671d8ca0a9855ec5d5d1c8a60a0fb5e2cf3a0431.json  query-2586bd355ae024ee03a2d2bfa48e1a141c610e146b2af03d32983d91fd321ae9.json  query-324655fce4072a2e65dab4f6d4b91a6fb85a068aa942d602c180043023e1d634.json  query-38a9ea217c952f7094ccfe5ae621088e2ea2105c9415eb0e79e6f4427e2a0449.json  query-67aafa1eb1314edf05d0cdbb08d094c059f82e25533a5af065e3e4e747a247d3.json  query-709fa45ed571271da9b3a89a864775c00dda4c2e3f4c348cb2113f95803690ef.json  query-893d0b469e8f075dc5edf1681e65fee6770a6845dc4af774f27f20f6800d9ef3.json
assets/: README.md
migrations/: 0001_init.sql
quizzes/: collocations-trainer-100.toml  present-past-basic.toml  verb-patterns-multi.toml
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  progress.rs  quiz.rs  render.rs  route.rs
src/db/: mod.rs  progress.rs
src/models/: mod.rs  quiz.rs  roadmap.rs
web/: app.js  htmx.min.js  index.html  style.css
