[package]
name = "cram"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe-code = "deny"

[workspace.lints.clippy]
absolute_paths = "deny"
cast_precision_loss = "allow"
doc_include_without_cfg = "warn"
inline_always = "allow"
items_after_statements = "allow"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
wildcard_imports = "deny"

[dependencies]
axum = "0.8"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.7", features = ["fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
